add allocation api
